--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -29,8 +29,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pylint autopep8
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          pip install pylint autopep8 pytest
 
       - name: Analyzing the code with pylint
         run: |
@@ -59,8 +59,11 @@ jobs:
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       - name: Build Client Package
-        run: pip install .
+        run: pip install -e client/
 
       - name: Test with pytest
         run: |
+          python --version
+          pip freeze
+          cat client/config.py
           pytest
