--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -65,5 +65,5 @@ jobs:
         run: |
           python --version
           pip freeze
-          cat client/config.py
+          cat client/client/config.py
           pytest
