--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -1,5 +1,9 @@
-cmake_minimum_required(VERSION 3.10)
+cmake_minimum_required(VERSION 3.14)
 project(VenoraServer)
+
+# If missing this library, install with
+# `apt-get install libpq-dev postgresql-server-dev-all`
+find_package(PostgreSQL REQUIRED)
 
 add_subdirectory(logic)
 add_subdirectory(networking)
@@ -7,5 +11,8 @@ add_subdirectory(database)
 
 add_executable(server server.c)
 
-target_link_libraries(server PRIVATE logic networking database)
-target_compile_options(server PRIVATE -g)
+target_include_directories(database PRIVATE ${PostgreSQL_INCLUDE_DIRS})
+
+target_link_libraries(server PRIVATE logic networking database ${PostgreSQL_LIBRARIES})
+
+target_compile_options(server PRIVATE -g -Wall)
