Login feature, db accessor in server, client net improvements

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -72,6 +72,10 @@
       "args": ["/bin/bash", "-c", "./build.sh"],
       "options": {
         "cwd": "${workspaceFolder}/server"
+      },
+      "group": {
+        "kind": "build",
+        "isDefault": true
       }
     },
     {
