--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -11,7 +11,7 @@ add_subdirectory(database)
 
 add_executable(server server.c)
 
-target_include_directories(database PRIVATE ${PostgreSQL_INCLUDE_DIRS})
+target_include_directories(server PRIVATE ${PostgreSQL_INCLUDE_DIRS})
 
 target_link_libraries(server PRIVATE logic networking database ${PostgreSQL_LIBRARIES})
 
