--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,6 +1,9 @@
 # Creates the server environment
 FROM gcc:latest
 
+RUN apt-get update && \
+    apt-get install -y cmake
+
 # Env vars for srv dir subfolders
 ENV PROJECT_SRVHOME=/srv
 
@@ -11,6 +14,5 @@ ADD . ${PROJECT_SRVHOME}
 
 WORKDIR $PROJECT_SRVHOME
 
-# RUN gcc -o server server.c
-
-# CMD ["./server"]
+# Should I just move to env and then not make .env public?
+CMD ["/bin/bash", "-c", "export DB_PASSWORD=$(cat /run/secrets/db-password) && ./build.sh && echo 'Starting server' && ./build/server && echo 'Done running'"]
