Fix success_data to take DataBlocks, fix db DDLs, add db healthcheck before srv start, client functionality progress

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -76,7 +76,10 @@
       "group": {
         "kind": "build",
         "isDefault": true
-      }
+      },
+      "problemMatcher": [
+        "$gcc"
+      ]
     },
     {
       "label": "Build",
