--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -2,7 +2,8 @@
 FROM gcc:latest
 
 RUN apt-get update && \
-    apt-get install -y cmake
+    apt-get install -y \
+    cmake postgresql-client
 
 # Env vars for srv dir subfolders
 ENV PROJECT_SRVHOME=/srv
@@ -15,4 +16,4 @@ ADD . ${PROJECT_SRVHOME}
 WORKDIR $PROJECT_SRVHOME
 
 # Should I just move to env and then not make .env public?
-CMD ["/bin/bash", "-c", "export DB_PASSWORD=$(cat /run/secrets/db-password) && ./build.sh && echo 'Starting server' && ./build/server && echo 'Done running'"]
+CMD ["/bin/bash", "-c", "export DB_PASSWORD=$(cat /run/secrets/db-password) && ./build.sh && ./start_srv_after_db.sh"]
