--- a/server/logic/CMakeLists.txt
+++ b/server/logic/CMakeLists.txt
@@ -9,3 +9,4 @@ add_library(logic
 
 # Include it
 target_include_directories(logic PUBLIC ${CMAKE_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR} ${PostgreSQL_INCLUDE_DIRS} networking)
+target_compile_options(logic PRIVATE -g -Wall)
