--- a/server/database/CMakeLists.txt
+++ b/server/database/CMakeLists.txt
@@ -8,4 +8,5 @@ add_library(database
 )
 
 # Include it
-target_include_directories(database PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ${PostgreSQL_INCLUDE_DIRS})
+target_include_directories(database PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ${PostgreSQL_INCLUDE_DIRS}) 
+target_compile_options(networking PRIVATE -g -Wall)
