--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,11 +10,6 @@
       "request": "attach",
       "program": "/srv/build/server",
       "processId": "${command:pickRemoteProcess}",
-      // "args": [],
-      // "stopAtEntry": true,
-      // "cwd": "/srv",
-      // "environment": [],
-      // "externalConsole": false,
       "MIMode": "gdb",
       "setupCommands": [
         {
@@ -26,8 +21,8 @@
       "miDebuggerPath": "/usr/bin/gdb",
       "miDebuggerArgs": "",
       "logging": {
-        "engineLogging": true,
-        "traceResponse": true
+        "engineLogging": false,
+        "traceResponse": false
       },
       "pipeTransport": {
         "pipeCwd": "${workspaceRoot}",
@@ -42,26 +37,6 @@
         }
       }
     },
-    // "sourceFileMap": {
-    //     "/srv": "${workspaceRoot}/server",
-    //     "/srv/networking": "${workspaceRoot}/server/networking"
-    //   }
-    // "pipeArgs": [
-    //           "exec",
-    //           "-i",
-    //           "venora-server-1",
-    //           "gdbserver",
-    //           "localhost:9394",
-    //           "/srv/build/server"
-    //         ],
-
-    // {
-    //   "name": "Docker C Server Debug",
-    //   "type": "docker",
-    //   "request": "launch",
-    //   "preLaunchTask": "docker-run: debug"
-    //   // "platform": "C",
-    // },
     {
       "name": "Python Debugger: Module",
       "type": "debugpy",
