Add REST API in front of db

--- a/db-accessor-api/Dockerfile
+++ b/db-accessor-api/Dockerfile
@@ -1,12 +1,17 @@
 FROM python:3.9-slim
 
-WORKDIR /usr/src/app
+RUN apt-get update && apt-get install -y \
+        libpq-dev gcc
 
-COPY . .
+WORKDIR /app
+
+COPY requirements.txt /app/
 
 RUN pip install --no-cache-dir -r requirements.txt
 
-EXPOSE 5000
+COPY . .
+
+EXPOSE 80
 
 # Define environment variable for flask
 ENV FLASK_APP=web-service.py
