--- a/db-accessor-api/requirements.txt
+++ b/db-accessor-api/requirements.txt
@@ -4,10 +4,13 @@ click==8.1.7
 Flask==3.0.3
 Flask-JWT-Extended==4.6.0
 gunicorn==22.0.0
+importlib_metadata==8.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==2.1.5
 packaging==24.1
 psycopg2==2.9.9
 PyJWT==2.8.0
+python-dotenv==1.0.1
 Werkzeug==3.0.3
+zipp==3.19.2
