--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -3,7 +3,38 @@ project(VenoraServer)
 
 # If missing this library, install with
 # `apt-get install libpq-dev postgresql-server-dev-all`
-find_package(PostgreSQL REQUIRED)
+# find_package(PostgreSQL REQUIRED)
+# `apt-get install libcurl4-openssl-dev libjson-c-dev`
+find_package(CURL REQUIRED)
+
+# Find JSON-C package
+find_path(JSONC_INCLUDE_DIR json-c/json.h PATHS /usr/include/json-c)
+find_library(JSONC_LIBRARY NAMES json-c PATHS /usr/lib/x86_64-linux-gnu)
+
+if (JSONC_INCLUDE_DIR AND JSONC_LIBRARY)
+    set(JSON-C_FOUND TRUE)
+    set(JSON-C_INCLUDE_DIRS ${JSONC_INCLUDE_DIR})
+    set(JSON-C_LIBRARIES ${JSONC_LIBRARY})
+else()
+    set(JSON-C_FOUND FALSE)
+endif()
+
+set(CMAKE_C_STANDARD 11)
+set(CMAKE_C_STANDARD_REQUIRED ON)
+
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
+
+
+# Add the found include directory to the include paths
+# target_include_directories(server PRIVATE
+#     ${JSON-C_INCLUDE_DIRS}
+#     ${CURL_INCLUDE_DIRS}
+#     ${CMAKE_SOURCE_DIR}/database
+# )
+# include_directories(logic networking database ${JSON-C_INCLUDE_DIRS} ${CURL_INCLUDE_DIRS})
+include_directories(${CMAKE_SOURCE_DIR}/logic ${CMAKE_SOURCE_DIR}/database ${CURL_INCLUDE_DIRS} ${JSON-C_INCLUDE_DIRS})
+
 
 add_subdirectory(logic)
 add_subdirectory(networking)
@@ -11,11 +42,6 @@ add_subdirectory(database)
 
 add_executable(server server.c)
 
-target_include_directories(server PRIVATE ${PostgreSQL_INCLUDE_DIRS})
-
-target_link_libraries(server PRIVATE logic networking database ${PostgreSQL_LIBRARIES})
-
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
+target_link_libraries(server PRIVATE logic networking database ${JSON-C_LIBRARIES} ${CURL_LIBRARIES})
 
 target_compile_options(server PRIVATE -g -Wall)
