--- a/server/database/CMakeLists.txt
+++ b/server/database/CMakeLists.txt
@@ -5,8 +5,11 @@ add_library(database
     token.h
     token.c
     db_structs.h
+    web-utils.h
+    web-utils.c
 )
 
 # Include it
-target_include_directories(database PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ${PostgreSQL_INCLUDE_DIRS}) 
-target_compile_options(networking PRIVATE -g -Wall)
+target_include_directories(database PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}) 
+target_link_libraries(database PRIVATE ${CURL_LIBRARIES} ${JSON-C_LIBRARIES})
+target_compile_options(database PRIVATE -g -Wall)
