Redesign signin page, add connect functionality to website, cookies for uuid, web structure

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,7 +53,7 @@ services:
       - db-accessor-api
     networks:
       - isolated
-    hostname: "server"
+    hostname: "venora-server"
     cap_add:
       - SYS_PTRACE
     security_opt:
