Add secret token for workflow to access submodules

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -30,6 +30,10 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          submodules: true
+          fetch-depth: 0
+          token: ${{ secrets.SUBMODULE_ACCESS_TOKEN }}
 
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v3
