--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -20,6 +20,9 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+          token: ${{ secrets.SUBMODULE_ACCESS_TOKEN }}
 
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v3
@@ -58,7 +61,7 @@ jobs:
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       - name: Build Client Package
-        run: pip install -e client/
+        run: pip install -e client/library/
 
       - name: Test with pytest
         run: |
