--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -61,7 +61,7 @@ jobs:
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       - name: Build Client Package
-        run: ls && pip install -e client/library/
+        run: ls client && echo "--------" && ls client/library/ && pip install -e client/library/
 
       - name: Test with pytest
         run: |
