--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -21,6 +21,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
         with:
+          submodules: true
           fetch-depth: 0
           token: ${{ secrets.SUBMODULE_ACCESS_TOKEN }}
 
