--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -39,7 +39,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y libcurl4-openssl-dev libjson-c-dev \
-            cmake build-essential liblog4c-dev
+            cmake build-essential liblog4c-dev libcmocka-dev
 
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v3
