--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -50,6 +50,10 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+        with:
+          submodules: true
+          fetch-depth: 0
+          token: ${{ secrets.SUBMODULE_ACCESS_TOKEN }}
 
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v3
